name: "probidor"
opam-version: "2.0"
maintainer: "mathis.bouverot@ens.psl.eu, victor.blanchi@ens.psl.eu"
authors: [
  "Mathis Bouverot-Dupuis <mathis.bouerot@ens.psl.eu>, Victor Blanchi <victor.blanchi@ens.psl.eu>"
]
license: "MIT"
synopsis: "A game engine for the Quoridor game, that communicates to players via http"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "5.1.1" }
  "dune"  { >= "2.8" }
  "ocamlformat" { = "0.26.1" }
  "lwt" { >= "5.7.0" }
  "yojson" { >= "2.1.1" }
  "ocamlgraph" { >= "2.1.0" }
  "qcheck-core" { >= "0.21.3" }
]
