(test
 (name board_tests)
 (flags
  (:standard -warn-error +A))
 (modules board_tests)
 (libraries quoridor qcheck-core qcheck-core.runner))

(test
 (name sockets_tests)
 (flags
  (:standard -warn-error +A))
 (modules sockets_tests)
 (libraries sockets qcheck-core qcheck-core.runner))

(test
 (name state_tests)
 (flags
  (:standard -warn-error +A))
 (modules state_tests)
  (libraries quoridor qcheck-core qcheck-core.runner))
