(test
 (name board_tests)
 (flags
  (:standard -warn-error +A))
 (modules board_tests)
 (libraries probidor.quoridor qcheck-core qcheck-core.runner))

(test
 (name protocol_tests)
 (flags
  (:standard -warn-error +A))
 (modules protocol_tests)
 (libraries
  probidor.sockets
  probidor.quoridor
  qcheck-core
  qcheck-core.runner))

(test
 (name state_tests)
 (flags
  (:standard -warn-error +A))
 (modules state_tests)
 (libraries probidor.quoridor qcheck-core qcheck-core.runner))
